Update RestAssuerdTest.java